--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "test": "jest --verbose"
   },
   "dependencies": {
+    "@js-monorepo/server": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,8 +22,12 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-jest": "^29.3.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
