--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "validate-branch-name": "^1.3.2"
   },
   "dependencies": {
-    "msbproject": "file:"
+    "msbproject": "file:",
+    "vite": "^6.3.2"
   }
 }
