--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "concurrently": "^9.1.2",
     "validate-branch-name": "^1.3.2"
   },
   "dependencies": {
-    "msbproject": "file:"
+    "msbproject": "file:",
+    "react-google-recaptcha": "^3.1.0"
   }
 }
